update template birthday 1

--- a/templates/template_birthday_1/index.html
+++ b/templates/template_birthday_1/index.html
@@ -22,7 +22,7 @@
     <div id="homepage">
         <!-- NAVBAR -->
         <nav>
-            <div class="container-fluid">
+            <div class="container-fluid animated fadeInUp">
                 <div class="row d-none d-lg-block">
                     <div class="offset-lg-3 col-lg-9 pr-lg-0">
                         <ul class="menu">
@@ -58,7 +58,7 @@
             </div>
         </nav>
         <!-- Section BANNER -->
-        <section id="banner">
+        <section id="banner" class="animated fadeIn">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 px-0 px-lg-0">
@@ -66,7 +66,10 @@
                         <img class="img-fluid w-m-100p d-block d-lg-none" src="images/mobile-background-01.png" />
                         <img class="img-fluid logo boxc d-none d-lg-block" src="images/images-01.png" />
                         <img class="img-fluid logo boxc d-block d-lg-none" src="images/mobile-images-01.png" />
-                        <img class="img-fluid motif boxc" src="images/images-02.png" />
+                        <img class="img-fluid motif boxc move-up" src="images/images-02.png" />
+                        <img class="img-fluid ornament-01 move-right" src="images/ornament-banner-01.png" />
+                        <img class="img-fluid ornament-02 move-left" src="images/ornament-banner-02.png" />
+                        <img class="img-fluid ornament-03 move-down" src="images/ornament-banner-03.png" />
                         <a id="chevron-down" class="gobot" href="#about"><img class="img-fluid icon boxc" src="images/icon-01.png" /></a>
                     </div>
                 </div>
@@ -76,19 +79,23 @@
         <section id="about">
             <div class="container-fluid pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-10p pb-lg-20p pl-lg-5p pr-lg-5p">
                 <div class="row">
-                    <img class="img-fluid motif1 boxc d-none d-lg-block" src="images/icon-02.png" />
-                    <img class="img-fluid motif2 boxc w-lg-100p d-none d-lg-block" src="images/icon-03.png" />
-                    <img class="img-fluid motif2 boxc w-m-100p d-block d-lg-none" src="images/mobile-icon-01.png" />
+                    <img class="img-fluid motif1 boxc move-up" src="images/ornament-about-02.png" />
+                    <img class="img-fluid motif2 boxc w-lg-100p d-none d-lg-block" src="images/ornament-about-01.png" />
+                    <img class="img-fluid motif2 boxc w-m-100p d-block d-lg-none" src="images/mobile-ornament-about-01.png" />
+                    <img class="img-fluid motif3 boxc d-none d-lg-block move-left" src="images/ornament-about-03.png" />
+                    <div class="wrap d-block d-lg-none">
+                        <img class="img-fluid motif3 boxc move-left" src="images/ornament-about-03.png" />
+                    </div>
                     <div class="col-lg-6 pt-lg-3p d-none d-lg-block">
-                        <img class="img-fluid bs" src="images/images-03.png" />
+                        <img class="img-fluid images bs move-up-slow" src="images/images-03.png" />
                     </div>
                     <div class="col-lg-6 pt-m-0 pl-m-15 pt-lg-5p pl-lg-15p">
-                        <h2 class="font-green mb-lg-10p">
+                        <h2 class="font-green mb-lg-10p slideanim">
                             <span>ABOUT</span><br />
                             DIANA ROSS
                         </h2>
                         <img class="img-fluid bs mb-m-25p d-block d-lg-none" src="images/images-03.png" />
-                        <div class="pl-m-0 pl-lg-10p">
+                        <div class="pl-m-0 pl-lg-10p slideanim">
                             <p>
                                 Hi! I’m Diana Ross, for those who know me already, they probably already know that I am adventurous and I’m always excited to try new things. I think there’s a lot of amazing things you can try in this big BIG world.
                             </p>
@@ -104,24 +111,24 @@
         <section id="dateandplace">
             <div class="container-fluid pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p bg-yellow">
                 <div class="row">
-                    <img class="img-fluid bg boxc w-lg-100p d-none d-lg-block" src="images/background-02.png" />
+                    <img class="img-fluid bg boxc w-lg-100p d-none d-lg-block move-up" src="images/background-02.png" />
                     <img class="img-fluid bg boxc w-m-100p d-block d-lg-none" src="images/mobile-background-02.png" />
-                    <img class="img-fluid motif1 boxc" src="images/icon-04.png" />
-                    <img class="img-fluid motif2 boxc" src="images/icon-05.png" />
+                    <img class="img-fluid motif1 boxc move-up" src="images/icon-04.png" />
+                    <img class="img-fluid motif2 boxc move-up-slow" src="images/icon-05.png" />
                     <div class="col-lg-3 mb-lg-10p">
-                        <h2 class="font-white">
+                        <h2 class="font-white slideanim">
                             <span>DATE</span><br />
                             & PLACE
                         </h2>
                     </div>
                     <div class="col-lg-9 mb-lg-10p">
-                        <div class="w-m-100p w-lg-50p">
+                        <div class="w-m-100p w-lg-50p slideanim">
                             <p>My birthday will be celebrated with a lot of feast! And I ensure you that I will present you the best food from Indonesia, with the one and only, Kempinsky Catering.</p>
                         </div>
                     </div>
                     <div class="col-lg-12">
                         <div class="row content">
-                            <div class="col-lg-4">
+                            <div class="col-lg-4 slideanimImage1">
                                 <div class="box bg-green">
                                     <div class="boxc font-white">
                                         <span>23</span><br />
@@ -135,7 +142,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-4 slideanimImage2">
                                 <div class="box bg-green">
                                     <img class="img-fluid w-lg-100p" src="images/images-04.png" />
                                     <div class="detail">
@@ -153,7 +160,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-4 slideanimImage3">
                                 <div class="box bg-green">
                                     <img class="img-fluid w-lg-100p" src="images/images-05.png" />
                                 </div>
@@ -174,7 +181,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 mtext-center pt-m-10p pb-m-10p pt-lg-3p pb-lg-3p pl-lg-5p pr-lg-5p bg-green">
-                        <h2 class="mb-lg-0 font-white"><span>GALLERY</span></h2>
+                        <h2 class="mb-lg-0 font-white slideanim"><span>GALLERY</span></h2>
                     </div>
                     <div class="col-lg-12 pl-lg-0 pr-lg-0 d-none d-lg-block">
                         <div id="js-gallery">
@@ -244,7 +251,7 @@
         <section id="rsvp">
             <div class="container-fluid pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 slideanimLeft">
                         <h2 class="font-yellow mb-lg-10p">
                             <span>ARE YOU</span><br />
                             COMING?
@@ -257,7 +264,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 slideanim">
                         <form>
                             <table>
                                 <tr>
@@ -302,6 +309,35 @@
                                 </div>
                                 <div class="order-1 order-lg-3 col-lg-3 pl-lg-0 pr-lg-0 mtext-center text-right">
                                     <input type="submit" value="SUBMIT" class="button-pink bs ma-m" data-toggle="modal" data-target="#ebrochure" />
+                                    <!-- Popup Wishlist -->
+                                    <div class="modal fade" id="wishlist-popup">
+                                        <div class="modal-dialog modal-dialog-centered modal-lg">
+                                            <div class="modal-content">
+                                                <div class="container-fluid">
+                                                    <div class="row">
+                                                        <div class="col-lg-12 pl-lg-0 pr-lg-0">
+                                                            <img class="img-fluid d-none d-lg-block w-lg-100p" src="images/popup-01.png" />
+                                                            <img class="img-fluid d-block d-lg-none w-lg-100p" src="images/popup-02.png" />
+                                                            <div class="boxc">
+                                                                <h2 class="font-yellow mb-lg-5p">
+                                                                    <span>THANK YOU</span><br />
+                                                                    FOR PARTICIPATING
+                                                                </h2>
+                                                                <p>
+                                                                    We will saving your seat for<br />
+                                                                    your attendance, looking<br />
+                                                                    forward to see you at<br />
+                                                                    my Birthday Party!
+                                                                </p>
+                                                                <p>Love, Diana Ross</p>
+                                                                <a class="button-wishlist" class="close" data-dismiss="modal">CLOSE</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </form>
@@ -314,8 +350,8 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 pl-lg-0 pr-lg-0">
-                        <img class="img-fluid w-lg-100p d-none d-lg-block" src="images/images-10.png" />
-                        <img class="img-fluid w-lg-100p d-block d-lg-none" src="images/mobile-images-02.png" />
+                        <div class="bg"></div>
+                        <img class="img-fluid ornament boxc" src="images/ornament-thanks-02.png" />
                         <div class="boxc desc">
                             <p>Love, Diana Ross</p>
                         </div>
