--- a/templates/template_birthday_1/wishlist.html
+++ b/templates/template_birthday_1/wishlist.html
@@ -22,7 +22,7 @@
     <div id="wishlist">
         <!-- NAVBAR -->
         <nav>
-            <div class="container-fluid">
+            <div class="container-fluid animated fadeInUp">
                 <div class="row d-none d-lg-block">
                     <div class="offset-lg-3 col-lg-9 pr-lg-0">
                         <ul class="menu">
@@ -59,11 +59,11 @@
         </nav>
         <!-- Section WISHLIST -->
         <section id="content-wishlist">
-            <img class="img-fluid w-lg-100p bg1 d-none d-lg-block" src="images/background-03.png" />
-            <img class="img-fluid w-lg-100p bg2 d-none d-lg-block" src="images/background-04.png" />
+            <img class="img-fluid w-lg-100p bg1 d-none d-lg-block move-up" src="images/background-03.png" />
+            <img class="img-fluid w-lg-100p bg2 d-none d-lg-block move-up" src="images/background-04.png" />
             <div class="container-fluid pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-15p pb-lg-10p pl-lg-5p pr-lg-5p">
                 <div class="row">
-                    <div class="col-lg-3 mb-lg-10p">
+                    <div class="col-lg-3 mb-lg-10p animated fadeInLeft">
                         <h2 class="font-yellow mb-lg-10p">
                             <span>GIFT IDEAS</span><br />
                             FOR ME
@@ -78,37 +78,37 @@
                     </div>
                     <div class="col-lg-9 mb-lg-10p pl-lg-3p">
                         <div class="row">
-                            <div class="col-6 col-lg-4 mb-lg-5p text-center">
+                            <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
                                     <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-01.png" />
                                     <p>SHOES</p>
                                 </a>
                             </div>
-                            <div class="col-6 col-lg-4 mb-lg-5p text-center">
+                            <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
                                     <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-02.png" />
                                     <p>ACCESSORIES</p>
                                 </a>
                             </div>
-                            <div class="col-6 col-lg-4 mb-lg-5p text-center">
+                            <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
                                     <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-03.png" />
                                     <p>SWEATER</p>
                                 </a>
                             </div>
-                            <div class="col-6 col-lg-4 mb-lg-5p text-center">
+                            <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
                                     <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-04.png" />
                                     <p>SELF CARE PRODUCTS</p>
                                 </a>
                             </div>
-                            <div class="col-6 col-lg-4 mb-lg-5p text-center">
+                            <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
                                     <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-05.png" />
                                     <p>TUMBLR</p>
                                 </a>
                             </div>
-                            <div class="col-6 col-lg-4 mb-lg-5p text-center">
+                            <div class="col-6 col-lg-4 mb-lg-5p text-center animated fadeInUp">
                                 <a href="" data-toggle="modal" data-target="#wishlist-popup">
                                     <img class="img-fluid w-lg-100p mb-lg-5p" src="images/wishlist-06.png" />
                                     <p>SPORTS WEAR</p>
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12 text-center">
+                    <div class="col-lg-12 text-center slideanim">
                         <p>You can <span>choose and select gift ideas</span> from the list above so others will not need to give the same gift.</p>
                         <p>However, It is not mandatory for you to select one from the list. <span>Your presence is much more important and needed.</span></p>
                     </div>
