--- a/templates/template_birthday_1/style-birthday-1.css
+++ b/templates/template_birthday_1/style-birthday-1.css
@@ -234,9 +234,18 @@
             top: 42%;
             width: 20%;
         }
-        #about .images{
+        #about .wrap-images{
             position: absolute;
             top: 20%;
+            width: 100%;
+            height: 60vh;
+            background: red;
+            overflow: hidden;
+        }
+        #about .wrap-images img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     /* DATE & PLACE */
         #dateandplace .bg{top: 60%;}
