update template birthday 1 (fixed)

--- a/templates/template_birthday_1/index.html
+++ b/templates/template_birthday_1/index.html
@@ -88,7 +88,8 @@
                     </div>
                     <div class="col-lg-6 pt-lg-3p d-none d-lg-block">
                         <div class="wrap-images bs move-up-slow">
-                            <img class="img-fluid" src="images/images-03.png" data-scroll-zoom />
+                            <img class="img-fluid" src="images/images-03.png" />
+                            <!-- <img class="img-fluid" src="images/images-03.png" data-scroll-zoom /> -->
                         </div>
                     </div>
                     <div class="col-lg-6 pt-m-0 pl-m-15 pt-lg-5p pl-lg-15p">
