--- a/templates/template_wedding_victor/index.html
+++ b/templates/template_wedding_victor/index.html
@@ -218,44 +218,48 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="carouselGallery" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="images/gallery-content-items-15.jpg" alt="First slide">
+        <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+            <div id="carouselGallery" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-75 mx-auto" src="images/gallery-content-items-15.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-75 mx-auto" src="images/gallery-content-items-16.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-75 mx-auto" src="images/gallery-content-items-17.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-75 mx-auto" src="images/gallery-content-items-18.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-75 mx-auto" src="images/gallery-content-items-19.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-75 mx-auto" src="images/gallery-content-items-20.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-75 mx-auto" src="images/gallery-content-items-21.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-75 mx-auto" src="images/gallery-content-items-22.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-75 mx-auto" src="images/gallery-content-items-23.jpg" alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselGallery" role="button" data-slide="prev">
+                <h3 class="carousel-control-prev-icon" aria-hidden="true"></h3>
+                <h3 class="sr-only">Previous</h3>
+              </a>
+              <a class="carousel-control-next" href="#carouselGallery" role="button" data-slide="next">
+                <h3 class="carousel-control-next-icon" aria-hidden="true"></h3>
+                <h3 class="sr-only">Next</h3>
+              </a>
             </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/gallery-content-items-16.jpg" alt="Second slide">
             </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/gallery-content-items-17.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/gallery-content-items-18.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/gallery-content-items-19.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/gallery-content-items-20.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/gallery-content-items-21.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/gallery-content-items-22.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/gallery-content-items-23.jpg" alt="Third slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselGallery" role="button" data-slide="prev">
-            <h3 class="carousel-control-prev-icon" aria-hidden="true"></h3>
-            <h3 class="sr-only">Previous</h3>
-          </a>
-          <a class="carousel-control-next" href="#carouselGallery" role="button" data-slide="next">
-            <h3 class="carousel-control-next-icon" aria-hidden="true"></h3>
-            <h3 class="sr-only">Next</h3>
-          </a>
         </div>
       </div>
     </div>
@@ -449,7 +453,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid contact px-5" id="rsvp">
+    <div class="container-fluid contact px-5 px-lg-0" id="rsvp">
         <div class="line d-none d-lg-block">
             <div class="line-wrap">
                 <img src="images/vertical-line-18.png">
