--- a/templates/template_wedding_2/index.html
+++ b/templates/template_wedding_2/index.html
@@ -365,8 +365,8 @@
             </div>
         </div>
     </div>
-    <div id="rsvp" class="container-fluid rsvp-section">
-        <div class="row my-lg-5">
+    <div class="container-fluid rsvp-section">
+        <div  id="rsvp" class="row my-lg-5">
             <div class="col-lg-7 px-lg-5">
                 <h2 class="text-gray my-5 ml-lg-5 pl-lg-5">
                     Are you coming?
