--- a/templates/template_wedding_1/index.html
+++ b/templates/template_wedding_1/index.html
@@ -387,15 +387,15 @@
             </div>
         </div>
     </div>
-    <div data-aos="fade-up" id="gallery" class="container-fluid our-gallery">
-        <div class="row">
+    <div id="gallery" class="container-fluid our-gallery">
+        <div  data-aos="fade-up" class="row">
             <div class="col-lg-12 text-center">
                 <h3 class="text-dgreen my-lg-5 mb-5">
                     OUR GALLERY
                 </h3>
             </div>
         </div>
-        <div class="row">
+        <div  data-aos="fade-down" class="row">
             <div class="col-lg-12 px-lg-0 px-4">
                 <div class="carousel-gallery owl-theme">
                     <div class="item">
