--- a/templates/template_wedding_2/style-wedding-2.css
+++ b/templates/template_wedding_2/style-wedding-2.css
@@ -102,12 +102,13 @@
   		-webkit-box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.7);
 		-moz-box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.7);
 		box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.7);
+		margin-bottom: 100px;
   	}
   	.bg-celebrate img.image-celebrate{
   		margin-bottom: -200px;
   	}
   	.gallery-section{
-  		padding-top: 200px;
+  		padding-top: 100px;
   	}
   	.bg-celebrate .section-left::after {
   		content: "";
